# porter-app-create-task

./: Dockerfile.symlink  Makefile  README.md  docker-compose.yml  spec.md
.github/workflows/: porter-app-1-api.yml  porter-app-1-ui.yml  porter-app-10-api.yml  porter-app-10-test.yml  porter-app-10-ui.yml  porter-app-11-api.yml  porter-app-3-api.yml  porter-app-3-ui.yml
api/: Dockerfile  main.py  pyproject.toml
ui/: .eslintrc.json  CLAUDE.md  package-lock.json  package.json  tailwind.config.ts
ui/src/: types.ts
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/applications/: page.tsx
ui/src/app/applications/new/: page.tsx
ui/src/components/: ErrorBoundary.tsx  Sidebar.tsx
ui/src/components/MultiStepForm/: FormStepper.tsx  MultiStepForm.tsx
ui/src/components/optional/: EnvironmentVariables.tsx  PreDeployJobs.tsx  SyncEnvironmentGroups.tsx
ui/src/components/services/: AddServiceDropdown.tsx  ServiceCard.tsx  ServiceValidation.tsx
ui/src/components/services/tabs/: AdvancedTab.tsx  MainTab.tsx  NetworkingTab.tsx  ResourcesTab.tsx
ui/src/components/steps/: DeploymentMethodSelector.tsx  GitRepositorySelector.tsx  Step1ApplicationSetup.tsx  Step2SourceConfig.tsx  Step3ServiceConfig.tsx  Step4OptionalConfig.tsx
ui/src/components/ui/: button.tsx  empty-state.tsx  input.tsx  slider.tsx  spinner.tsx  tooltip.tsx
ui/src/hooks/: useApiState.ts
ui/src/services/: api.ts
ui/src/types/: form.types.ts
ui/src/utils/: apiClient.ts  errorHandling.ts  formDataTransformer.ts
